--- a/index.htm
+++ b/index.htm
@@ -1,12 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title></title>
+        <title>Latihan Javascript</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link href="css/style.css" rel="stylesheet">
+        <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet">
     </head>
     <body>
-    
+        <div style="width: 100%; text-align: center;">
+            <h1 id="banner"></h1>
+        </div>
+        <br>
+        <div style="width:20%;margin: 0px auto;text-align: center;">
+            <input type="text" placeholder="Masukan Nama Anda.." id="nama" class="form-control">
+            <br>
+            <button id="button" onclick="gantikalimat()" class="btn btn-md btn-primary"> Ganti </button>
+        </div>
+
     </body>
+    
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="custom.js"></script>
 </html>
